# pgpack

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  run_tests.yml
pgpack/: __init__.py  reader.py  writer.py
pgpack/common/: __init__.py  detector.py  errors.py  headers.py  repr.py  signatures.py
src/pgpack/: __init__.py  reader.py  writer.py
src/pgpack/common/: __init__.py  casts.py  detector.py  errors.py  metadata.py  repr.py  sizes.py  struct_formats.py
src/pgpack/pgcopylib/: __init__.py  reader.py  writer.py
src/pgpack/pgcopylib/core/: __init__.py  casts.py  dtype.py  enums.py  errors.py  functions.c  functions.pyx  header.py  metadata.py  repr.py
src/pgpack/pgcopylib/core/types/: __init__.py  arrays.c  arrays.pyx  dates.c  dates.pyx  digits.c  digits.pyx  geometrics.c  geometrics.pxd  geometrics.pyi  geometrics.pyx  ipaddrs.c  ipaddrs.pyx  jsons.c  strings.c  strings.pxd  strings.pyx  uuids.c
tests/: test_pgcopylib.py  test_pgpack.py
