[egg_info]
tag_build = 
tag_date = 0

[metadata]
license_files = README.md, CHANGELOG.md
name = pgpack
version = 0.3.3.dev2
author = 0xMihalich
author_email = bayanmobile87@gmail.com
description = PGCopy dump packed into LZ4, ZSTD or uncompressed with meta data information packed into zlib.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dns-technologies.github.io/dbhose_airflow/base_modules/pgpack/index.html

[options]
packages = find:
zip_safe = False
install_requires = 
    pandas>=2.1.0
    polars>=0.20.31
    pgcopylib==0.2.4.dev1
    light_compressor==0.1.1.dev1
